# tarantool-so-plugin-example

./: .gitignore  .gitmodules  CMakeLists.txt
src/: plugin.c
